# open-ended-poet

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: limitations.md  methodology.md  reproducibility.md  research_summary.md
results/: open_ended_archive.csv  open_ended_genealogy.csv  open_ended_transfer_matrix.csv
scripts/: run_all.py
src/: __init__.py  visualize.py
src/core/: __init__.py  dynamics.py  metrics.py
src/experiments/: __init__.py  open_ended_poet.py
src/models/: __init__.py  sparse_world_model.py
tests/: test_project.py
